# VisualServoing

iai_kinect2/kinect2_bridge/data/000136460947/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
iai_kinect2/kinect2_bridge/launch/: kinect2_bridge.launch
open_manipulator_visual_servoing/: CMakeLists.txt  package.xml
open_manipulator_visual_servoing/include/open_manipulator_visual_servoing/: blob_tracking.h  cloud_sub.h  color_finder.h  object_checker.h
open_manipulator_visual_servoing/launch/: color_finder.launch  color_tracking.launch  object_checker.launch
open_manipulator_visual_servoing/scripts/: dice_finder.py  dice_localizer.py  dice_test.py  sorting_logic.py
open_manipulator_visual_servoing/src/: blob_tracking.cpp  cloud_sub.cpp  color_finder.cpp  object_checker.cpp
open_manipulator_visual_servoing/srv/: IndexPointCloud.srv  LocateBlob.srv  ObjectChecking.srv
